--- a/Prototype/TimeLogRecursiveTags/TimeLogRecursiveTags/TimeLogRecursiveTags.csproj
+++ b/Prototype/TimeLogRecursiveTags/TimeLogRecursiveTags/TimeLogRecursiveTags.csproj
@@ -38,6 +38,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EfEnumToLookup">
+      <HintPath>..\packages\ef-enum-to-lookup.1.5.0\lib\net45\EfEnumToLookup.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
