--- a/Prototype/TimeLogRecursiveTags/TimeLogRecursiveTags/TimeLogRecursiveTags.csproj
+++ b/Prototype/TimeLogRecursiveTags/TimeLogRecursiveTags/TimeLogRecursiveTags.csproj
@@ -90,6 +90,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\BookingCode.cs" />
+    <Compile Include="Models\Conventions\EnumRenamingConvention.cs" />
     <Compile Include="Models\Conventions\ForeignKeyNamingConvention .cs" />
     <Compile Include="Models\TagTree.cs" />
     <Compile Include="Models\TimeLogContext.cs" />
