Sorted folder structure for SQL and added sample database

--- a/Timelog/Web/Web.config
+++ b/Timelog/Web/Web.config
@@ -21,7 +21,7 @@
 
   </entityFramework>
   <connectionStrings>
-    <add name="Timelog.Model.TimeLogContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Developer\TimeLogRecursiveTags.Models.TimeLogContext.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
+    <add name="Timelog.Model.TimeLogContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\work\TimeLog\Timelog\Timelog\Database\TimeLog.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <appSettings></appSettings>
