Pointed web server at sql server and created db migrations for db schema creation. Also changed db initializer to use CreateDatabaseIfNotExists

--- a/Timelog/Web/Web.config
+++ b/Timelog/Web/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -21,7 +21,29 @@
 
   </entityFramework>
   <connectionStrings>
-    <add name="Timelog.Model.TimeLogContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Developer\TimeLogRecursiveTags.Models.TimeLogContext.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
+    
+      <!-- the Timelog connection string below is used by the entity framework migration tool to generate migration scripts
+             using the following command in the package manager console with the default project set to this one:
+
+      # to regenerate the initial script (or a subsequent migration named something other than initial)
+      add-migration -force initial
+
+      # to generate an upgrade migration
+      add-migration
+
+      # to generate the script for the update
+      update-database -script –SourceMigration $InitialDatabase
+      # then delete the create table sql for __MigrationHistroy, as this will be in the core scripts
+
+    overwrite the resulting script over EntityCreation.sql file
+    this script is idenpotent, i.e it will upgrade any database as long as you setup the migrations correctly.
+    Once the first deployment needing an upgrade has been delivered then the update-database command will need to change
+    the source migration to the latest migration performed.
+    -->
+    
+    <add name="Timelog.Model.TimeLogContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=Timelog;Integrated Security=True;User Id=user;Password=imeta;MultipleActiveResultSets=True" />
+
+    <!--add name="Timelog.Model.TimeLogContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Developer\TimeLogRecursiveTags.Models.TimeLogContext.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" /-->
   </connectionStrings>
   
   <appSettings></appSettings>
@@ -78,6 +100,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web><authentication mode="Windows"></authentication></system.web>
+    
 <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
