--- a/Timelog/Model/Model.csproj
+++ b/Timelog/Model/Model.csproj
@@ -52,6 +52,11 @@
     <Compile Include="BookingCode.cs" />
     <Compile Include="Conventions\EnumRenamingConvention.cs" />
     <Compile Include="Conventions\ForeignKeyNamingConvention.cs" />
+    <Compile Include="Migrations\201504171627100_InitialCreate.cs" />
+    <Compile Include="Migrations\201504171627100_InitialCreate.Designer.cs">
+      <DependentUpon>201504171627100_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="TagTree.cs" />
     <Compile Include="TagType.cs" />
@@ -64,6 +69,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201504171627100_InitialCreate.resx">
+      <DependentUpon>201504171627100_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
