--- a/Timelog/Web/Web.config
+++ b/Timelog/Web/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -21,7 +21,7 @@
 
   </entityFramework>
   <connectionStrings>
-    <add name="Timelog.Model.TimeLogContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\work\TimeLog\Timelog\Timelog\Database\TimeLog.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
+    <add name="Timelog.Model.TimeLogContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\src\imeta\timelog\Timelog\Database\TimeLog.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <appSettings></appSettings>
