--- a/Timelog/DataAccess/DataAccess.csproj
+++ b/Timelog/DataAccess/DataAccess.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BookingCodeRepository.cs" />
+    <Compile Include="QueryExtensions.cs" />
     <Compile Include="Repositories\TimeEntryRepository.cs" />
     <Compile Include="Repositories\TagTreeRepository.cs" />
     <Compile Include="Repositories\TagRepository.cs" />
