Tided up Web and App.config to use local database in Web AppData

--- a/Timelog/Web/Web.config
+++ b/Timelog/Web/Web.config
@@ -41,9 +41,9 @@
     the source migration to the latest migration performed.
     -->
     
-    <add name="Timelog.Model.TimeLogContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=Timelog;Integrated Security=True;User Id=user;Password=imeta;MultipleActiveResultSets=True" />
+    <!--<add name="Timelog.Model.TimeLogContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=Timelog;Integrated Security=True;User Id=user;Password=imeta;MultipleActiveResultSets=True" />-->
 
-    <!--add name="Timelog.Model.TimeLogContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Developer\TimeLogRecursiveTags.Models.TimeLogContext.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" /-->
+    <add name="Timelog.Model.TimeLogContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|Datadirectory|\TimeLog.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <appSettings></appSettings>
