--- a/Timelog/DataAccess/packages.config
+++ b/Timelog/DataAccess/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="ef-enum-to-lookup" version="1.6.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
 </packages>
