--- a/Timelog/DataAccessTests/App.config
+++ b/Timelog/DataAccessTests/App.config
@@ -3,6 +3,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Timelog.TestData.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -14,9 +17,29 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
   <connectionStrings>
     <!--<add name="Timelog.Model.TimeLogContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=Timelog;Integrated Security=True;User Id=user;Password=imeta;MultipleActiveResultSets=True" />-->
 
     <add name="Timelog.Model.TimeLogContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|Datadirectory|\TimeLog.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <applicationSettings>
+    <Timelog.TestData.Properties.Settings>
+      <setting name="TimeEntriesToCreate" serializeAs="String">
+        <value>500</value>
+      </setting>
+      <setting name="CreateUsers" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="CreateTags" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="CreateTagTrees" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="CreateBookingCodes" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </Timelog.TestData.Properties.Settings>
+  </applicationSettings>
 </configuration>
