--- a/Timelog/DataAccess/DataAccess.csproj
+++ b/Timelog/DataAccess/DataAccess.csproj
@@ -30,9 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EfEnumToLookup, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1fde139e1e56f7c4, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ef-enum-to-lookup.1.6.0\lib\net45\EfEnumToLookup.dll</HintPath>
+    <Reference Include="EfEnumToLookup">
+      <HintPath>..\packages\ef-enum-to-lookup.1.7.1\lib\net45\EfEnumToLookup.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
@@ -60,6 +59,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interface\IBookingCodeRepository.cs" />
+    <Compile Include="Interface\ITagRepository.cs" />
+    <Compile Include="Interface\ITagTreeRepository.cs" />
+    <Compile Include="Interface\ITimeEntryRepository.cs" />
     <Compile Include="TestDataGeneratorFactory.cs" />
     <Compile Include="Conventions\EnumRenamingConvention.cs" />
     <Compile Include="Conventions\ForeignKeyNamingConvention.cs" />
@@ -80,15 +83,16 @@
     <Compile Include="TimeLogContext.cs" />
     <Compile Include="TimeLogContextDropCreateDatabaseAlwaysInitializer.cs" />
     <Compile Include="TimeLogContextCreateDatabaseIfNotExistsInitializer.cs" />
+    <Compile Include="TimLogDbContextFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common\Common.csproj">
       <Project>{7b6c3dd3-6a87-49a8-a907-165aff8e66bc}</Project>
       <Name>Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DataService\DataService.csproj">
-      <Project>{f484b32c-d02b-4c33-a7a9-209ccd071471}</Project>
-      <Name>DataService</Name>
+    <ProjectReference Include="..\EntityFramework.Interfaces\EntityFramework.Interfaces.csproj">
+      <Project>{88b6d9e9-3853-4e91-9644-eb3dd07910f8}</Project>
+      <Name>EntityFramework.Interfaces</Name>
     </ProjectReference>
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{b5bc2c8f-a98d-4994-8184-ab29f59cd8a3}</Project>
