--- a/Timelog/Web/Web.config
+++ b/Timelog/Web/Web.config
@@ -40,10 +40,10 @@
     Once the first deployment needing an upgrade has been delivered then the update-database command will need to change
     the source migration to the latest migration performed.
     -->
-    
-    <!--<add name="Timelog.Model.TimeLogContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=Timelog;Integrated Security=True;User Id=user;Password=imeta;MultipleActiveResultSets=True" />-->
 
-    <add name="Timelog.Model.TimeLogContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|Datadirectory|\TimeLog.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
+    <!--<add name="Timelog.DataAccess.TimeLogContext" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=Timelog;Integrated Security=True;User Id=user;Password=imeta;MultipleActiveResultSets=True" />-->
+
+<add name="Timelog.DataAccess.TimeLogContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|Datadirectory|\TimeLog.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <appSettings></appSettings>
