--- a/Timelog/Security/Web.config
+++ b/Timelog/Security/Web.config
@@ -27,10 +27,12 @@
     <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=AspNetIdentity;Integrated Security=SSPI;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="emailService:Account" value=""/>
-    <add key="emailService:Password" value=""/>
+    <add key="emailService:Account" value="time" />
+    <add key="emailService:Password" value="TimeLog:iMeta:2015" />
+    <add key="as:AudienceId" value="415e1927a3884f68abc74a72f38c7fd1" />
+    <add key="as:AudienceSecret" value="qMZdFDQuF23RV1Y-1Gz9L3cF3VmuFwVbam4fMTdAfpo" />
   </appSettings>
-  <runtime >
+  <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
