--- a/Timelog/Web/Web.csproj
+++ b/Timelog/Web/Web.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Controllers\TimeEntryController.cs" />
     <Compile Include="Controllers\TagTreeController.cs" />
     <Compile Include="Controllers\TagController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
